Fix UI shift view

--- a/src/pages/integrations/shapeshift/shapeshift-shift/shapeshift-shift.scss
+++ b/src/pages/integrations/shapeshift/shapeshift-shift/shapeshift-shift.scss
@@ -11,34 +11,11 @@ page-shapeshift-shift {
       margin-left: 1.5rem;
     }
   }
-  .agree-to-terms {
-    margin-top: 10px;
-    margin-bottom: 20px;
-    border-top: 1px solid #eee;
-    position: relative;
-    ion-item {
-      height: 6rem;
-      .check {
-        margin: 9px 15px 9px 4px !important;
-      }
-    }
-    .terms {
-      display: flex;
-      align-items: center;
-      height: 6rem;
-      position: absolute;
-      top: 0;
-      left: 5rem;
-      padding: 0rem;
-      margin: 0rem;
-      p {
-        padding-right: 1rem;
-        font-size: 12px;
-      }
-      a {
-        font-weight: bold;
-        cursor: pointer;
-      }
-    }
+  .button-link {
+    font-size: 12px;
+    background: white;
+    color: color($colors, primary);
+    margin-left: -12px;
+    text-align: center;
   }
 }
